--- a/index.htm
+++ b/index.htm
@@ -27,6 +27,12 @@
 <h3><i>Reino Protista</i></h3>
 <h3><i>Reino Bacteriano</i></h3>
 
+    <h1 > 
+        SECCION DE LICENCIAS DEL PERSONAL
+
+    </h1>
+    <p>Este es mi primer proyecto en HTML.</p>
+
 <h2>Ramas de la Biologia</h2>
 <P> La Biologia abarca varias ramas , las cuales son:</P>
 <h2>Genetica</h2>
